--- a/app/views/auth0/failure.html.erb
+++ b/app/views/auth0/failure.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-danger">
-  <h2>Error <%= @error_msg %></h2>
-  <p><%= @omniauth_error %></p>
+<div class="bg-red-50 border border-red-400 rounded-lg p-6">
+  <h2 class="text-red-800 text-xl font-bold mb-2">Error <%= @error_msg %></h2>
+  <p class="text-red-600"><%= @omniauth_error %></p>
 </div>
