--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,5 +1,8 @@
-<section class="jumbotron text-center">
-  <h2><img class="jumbo-thumbnail" src="https://cdn.auth0.com/styleguide/1.0.0/img/badge.svg"></h2>
-  <h1>Your tax assistant</h1>
-  <%= button_to 'Login', '/auth/auth0', method: :post, class: 'btn btn-success btn-lg', id: 'qsLoginBtn' unless session[:userinfo].present? %>
+<section class="flex flex-col items-center justify-center py-12 px-4">
+  <h2><img class="w-16 h-16" src="https://cdn.auth0.com/styleguide/1.0.0/img/badge.svg"></h2>
+  <h1 class="text-4xl font-bold mt-4 mb-6">Your tax assistant</h1>
+  <%= button_to 'Login', '/auth/auth0',
+      method: :post,
+      class: 'bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-6 rounded-lg text-lg transition-colors duration-200',
+      id: 'qsLoginBtn' unless session[:userinfo].present? %>
 </section>
