--- a/app/views/receipts/_new_receipt_form.html.haml
+++ b/app/views/receipts/_new_receipt_form.html.haml
@@ -1,7 +1,7 @@
 = form_for(Receipt.new, url: { controller: 'receipts', action: 'create' }, html: { multipart: true }) do |form|
   .space-y-4
     = form.text_field :seller, placeholder: 'Seller', class: 'block w-full rounded-lg border p-2'
-    = form.text_field :receipt_number, placeholder: 'Receipt Number', class: 'block w-full rounded-lg border p-2'
+    = form.text_field :description, placeholder: 'Description', class: 'block w-full rounded-lg border p-2'
     = form.number_field :total_amount, step: 0.01, placeholder: 'Total Amount', class: 'block w-full rounded-lg border p-2'
     = form.date_field :date, placeholder: 'Date', class: 'block w-full rounded-lg border p-2'
     = form.text_area :note, placeholder: 'Note', class: 'block w-full rounded-lg border p-2'
