--- a/app/views/receipts/_new_receipt_form.html.haml
+++ b/app/views/receipts/_new_receipt_form.html.haml
@@ -7,4 +7,6 @@
     = form.text_area :note, placeholder: 'Note', class: 'block w-full rounded-lg border p-2'
     %label.block.mb-2.text-medium{for: "file_input"} Upload Receipt
     = form.file_field :image, type: 'file', class: 'block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer focus:outline-none dark:border-gray-600', id: 'file_input'
-    = form.submit 'Submit', class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg cursor-pointer'
+    .flex.justify-between.items-center
+      %div.ml-auto
+        = form.submit 'Submit', class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg cursor-pointer'
