--- a/app/views/receipts/_form.html.haml
+++ b/app/views/receipts/_form.html.haml
@@ -22,3 +22,7 @@
     .flex.justify-between.items-center
       %div.ml-auto
         = form.submit 'Save', class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg cursor-pointer'
+        - if receipt.persisted?
+          = button_to 'Delete', receipt_path(receipt),
+                      method: :delete,
+                      class: 'link-button'
