--- a/app/views/receipts/_form.html.haml
+++ b/app/views/receipts/_form.html.haml
@@ -20,10 +20,11 @@
       %label.block.mb-2.text-medium{for: "file_input"} Upload Receipt
     = form.file_field :image, type: 'file', class: 'block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer focus:outline-none dark:border-gray-600', id: 'file_input'
     .flex.justify-between.items-center
-      %div.ml-auto
-        = form.submit 'Save', class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg cursor-pointer'
+      %div.flex-grow
         - if receipt.persisted?
           = button_to 'Delete', receipt_path(receipt),
                       method: :delete,
                       data: { confirm: 'Are you sure you want to delete this receipt?' },
-                      class: 'link-button'
+                      class: 'bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg cursor-pointer'
+      %div
+        = form.submit 'Save', class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg cursor-pointer ml-auto'
