--- a/app/views/receipts/_form.html.haml
+++ b/app/views/receipts/_form.html.haml
@@ -18,13 +18,50 @@
       %label.block.mb-2.text-medium{for: "file_input"} Upload New Receipt
     - else
       %label.block.mb-2.text-medium{for: "file_input"} Upload Receipt
-    = form.file_field :image, type: "file", class: "block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer focus:outline-none dark:border-gray-600", id: "file_input"
+    = form.file_field :image,
+        type: "file",
+        class: "block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer focus:outline-none dark:border-gray-600",
+        id: "file_input",
+        onchange: 'previewAvatar(event)',
+        class: 'form-control-file'
+    #avatar-preview-container{ style: 'display: none;' }
+      = image_tag '#',
+          id: 'avatar-preview',
+          alt: 'Avatar Preview',
+          style: 'max-width: 200px; max-height: 200px;'
+
     .flex.justify-between.items-center
       %div.flex-grow
-        - if receipt.persisted?
-          = button_to "Delete", receipt_path(receipt),
-                      method: :delete,
-                      data: { confirm: "Are you sure you want to delete this receipt?" },
-                      class: "bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg cursor-pointer"
-      %div
-        = form.submit "Save", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg cursor-pointer ml-auto"
+        = form.submit "Save",
+            class: "bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg cursor-pointer",
+            method: :post
+      - if receipt.persisted?
+        %label.bg-rose-400.hover:bg-rose-500.text-white.font-bold.py-2.px-4.rounded-lg.cursor-pointer{for: "delete"} Delete
+%div
+  - if receipt.persisted?
+    = button_to "",
+        receipt_path(receipt),
+        id: "delete",
+        hidden: true,
+        method: :delete,
+        data: { confirm: "Are you sure you want to delete this receipt?" }
+
+:javascript
+  function previewAvatar(event) {
+    const input = event.target;
+    const previewContainer = document.getElementById('avatar-preview-container');
+    const previewImage = document.getElementById('avatar-preview');
+
+    if (input.files && input.files[0]) {
+      const reader = new FileReader();
+
+      reader.onload = function(e) {
+        previewImage.src = e.target.result;
+        previewContainer.style.display = 'block';
+      }
+
+      reader.readAsDataURL(input.files[0]);
+    } else {
+      previewContainer.style.display = 'none';
+    }
+  }
