Add edit tooltip

--- a/app/views/receipts/index.html.haml
+++ b/app/views/receipts/index.html.haml
@@ -44,7 +44,10 @@
                   %p.text-sm.text-gray-600
                     = receipt.date.strftime("%Y-%m-%d")
                 %div
-                  = link_to heroicon("pencil-square"), edit_receipt_path(receipt), class: "text-gray-600 hover:text-gray-900"
+                  = link_to heroicon("pencil-square"),
+                      edit_receipt_path(receipt),
+                      class: "text-gray-600 hover:text-gray-900",
+                      title: "Edit"
       - if @pagy.pages > 1
         .flex.justify-center.space-x-2.my-4
           = pagy_nav(@pagy).html_safe
