--- a/app/views/receipts/_form.html.haml
+++ b/app/views/receipts/_form.html.haml
@@ -36,7 +36,8 @@
             class: "bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg cursor-pointer",
             method: :post
       - if receipt.persisted?
-        %label.bg-rose-400.hover:bg-rose-500.text-white.font-bold.py-2.px-4.rounded-lg.cursor-pointer{for: "delete"} Delete
+        %label.bg-rose-400.hover:bg-rose-500.text-white.font-bold.py-2.px-4.rounded-lg.cursor-pointer{for: "delete"}
+          = heroicon "trash"
 %div
   - if receipt.persisted?
     = button_to "",
