--- a/app/views/receipts/_form.html.haml
+++ b/app/views/receipts/_form.html.haml
@@ -7,28 +7,28 @@
     = form.date_field :date, placeholder: "Date", class: "block w-full rounded-lg border p-2"
     = form.text_area :note, placeholder: "Note", class: "block w-full rounded-lg border p-2"
     - if receipt.image.representable?
-      .flex.items-center.space-x-4
-        %span.text-medium
-          = "Your Receipt"
-        %span.text-sm.text-gray-600
-          = link_to rails_blob_path(receipt.image, disposition: "attachment") do
-            = image_tag "receipt.png", alt: "Download"
-      .container.rounded-lg.border
-        = image_tag receipt.image
-      %label.block.mb-2.text-medium{for: "file_input"} Upload New Receipt
-    - else
-      %label.block.mb-2.text-medium{for: "file_input"} Upload Receipt
-    = form.file_field :image,
-        type: "file",
-        class: "block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer focus:outline-none dark:border-gray-600",
-        id: "file_input",
-        onchange: 'previewReceipt(event)',
-        class: 'form-control-file'
-    #receipt-preview-container{ style: 'display: none;' }
+      %div.container.border.mt-5.border-gray-300.rounded-lg.p-2
+        = link_to rails_blob_path(receipt.image, disposition: "attachment") do
+          = image_tag receipt.image, title: "Download receipt"
+
+    .relative.items-center
+      = form.file_field :image,
+          type: "file",
+          class: "absolute inset-0 w-full h-full opacity-0 cursor-pointer",
+          id: "file_input",
+          onchange: 'previewReceipt(event)',
+          direct_upload: true
+      .flex.items-center.justify-center.px-4.py-2.bg-white.border.border-gray-300.rounded-md.shadow-sm.hover:bg-gray-50
+        = heroicon "arrow-up-tray"
+        - if receipt.image.representable?
+          %span.ml-2.text-sm.text-gray-600 Upload new receipt
+        - else
+          %span.ml-2.text-sm.text-gray-600 Upload receipt
+
+    #receipt-preview-container.container.border.border-gray-300.mt-5{ style: 'display: none;' }
       = image_tag '#',
           id: 'receipt-preview',
-          alt: 'Receipt Preview',
-          style: 'max-width: 200px; max-height: 200px;'
+          alt: 'Receipt Preview'
 
     .flex.justify-between.items-center
       %div.flex-grow
