--- a/app/views/receipts/edit.html.haml
+++ b/app/views/receipts/edit.html.haml
@@ -1,6 +1,26 @@
-.max-w-4xl.mx-auto.p-4.space-y-6
-  .flex.items-center.justify-between
-    %h1.text-2xl.font-bold Edit Receipt
-  .space-y-4
-    .container.mx-auto.border.p-4.rounded-lg
-      = render 'form', receipt: @receipt
+- receipt = @receipt
+= form_for(receipt, html: { multipart: true }) do |form|
+  .max-w-4xl.mx-auto.p-4.space-y-6
+    .flex.items-center.justify-between
+      %h1.text-2xl.font-bold Edit Receipt
+    .space-y-4
+      .container.mx-auto.border.p-4.rounded-lg
+        .space-y-4
+          = render 'receipt_form', receipt: receipt, form: form
+          = render 'shared/components/button/upload', receipt: receipt, form: form, text: "Upload new receipt"
+
+          .flex.justify-between.items-center
+            %div.flex-grow
+              = render "shared/components/button/save", form: form
+
+            %label.bg-rose-400.hover:bg-rose-500.text-white.font-bold.py-2.px-4.rounded-lg.cursor-pointer{for: "delete"}
+              = heroicon "trash"
+
+%div
+  = button_to "",
+      receipt_path(receipt),
+      id: "delete",
+      hidden: true,
+      method: :delete,
+      data: { confirm: "Are you sure you want to delete this receipt?" }
+
