--- a/app/views/receipts/index.html.haml
+++ b/app/views/receipts/index.html.haml
@@ -1,9 +1,9 @@
-.max-w-4xl.mx-auto.p-4.space-y-6
+.space-y-4
   .flex.items-center.justify-between
     %h1.text-2xl.font-bold Add Receipt
   .space-y-4
     .container.mx-auto.border.p-4.rounded-lg
-      = render "form"
+      = render "new_receipt_form"
     .container.mx-auto.border.p-4.rounded-lg
       %h1.text-2xl.font-bold Your receipts
       = form_tag(receipts_path, method: "get") do
