--- a/app/views/receipts/index.html.haml
+++ b/app/views/receipts/index.html.haml
@@ -6,25 +6,7 @@
       = render "new_receipt_form"
     .container.mx-auto.border.p-4.rounded-lg
       %h1.text-2xl.font-bold Your receipts
-      = form_tag(receipts_path, method: "get") do
-        .flex.flex-col.md:flex-row.items-start.md:items-start.border.rounded-lg.p-4.mt-4.space-y-4.md:space-y-0.md:space-x-4
-          .flex.flex-col{class: "md:w-1/4"}
-            %label Filter
-            = text_field_tag :search, params[:search], class: "border rounded-lg w-full"
-          .flex.flex-col{class: "md:w-1/4"}
-            %label Start Date
-            = date_field_tag :start_date, params[:start_date], class: "border rounded-lg w-full"
-          .flex.flex-col{class: "md:w-1/4"}
-            %label End Date
-            = date_field_tag :end_date, params[:end_date], class: "border rounded-lg w-full"
-          .flex.flex-col{class: "md:w-1/4"}
-            %label &nbsp;
-            %div.bg-green-500.hover:bg-green-600.text-white.font-bold.py-2.px-4.rounded-lg.w-full.flex.items-center.justify-center.gap-2
-              %div.flex-col
-                = heroicon "magnifying-glass"
-              %div.flex-col
-                = submit_tag "Search"
-
+      = render "shared/components/search", path: receipts_path
       - @receipts.each do |receipt|
         .bg-white.rounded-lg.border.shadow-sm.mt-5
           .p-4
