--- a/app/views/shared/components/button/_upload.html.haml
+++ b/app/views/shared/components/button/_upload.html.haml
@@ -8,5 +8,5 @@
 
   .flex.items-center.justify-center.px-4.py-2.bg-white.border.border-gray-300.rounded-md.shadow-sm.hover:bg-gray-50
     = heroicon "arrow-up-tray"
-    %span.ml-2.text-sm.text-gray-600
+    %span.ml-2.text-gray-600
       = text
