--- a/app/views/receipts/_receipt_form.html.haml
+++ b/app/views/receipts/_receipt_form.html.haml
@@ -1,9 +1,25 @@
-= form.text_field :seller, placeholder: "Seller", class: "block w-full rounded-lg border p-2"
-= form.text_field :description, placeholder: "Description", class: "block w-full rounded-lg border p-2"
-= form.number_field :total_amount, step: 0.01, placeholder: "Total Amount", class: "block w-full rounded-lg border p-2"
-= form.date_field :date, placeholder: "Date", class: "block w-full rounded-lg border p-2"
-= form.text_area :note, placeholder: "Note", class: "block w-full rounded-lg border p-2"
-- if receipt.image.representable?
-  %div.container.border.mt-5.border-gray-300.rounded-lg.p-2
-    = link_to rails_blob_path(receipt.image, disposition: "attachment") do
-      = image_tag receipt.image, title: "Download receipt"
+.space-y-1
+  %label.block.w-full{for: :seller} Seller
+  = form.text_field :seller, class: "block w-full rounded-lg border p-2"
+
+.space-y-1
+  %label.block.w-full{for: :seller} Description
+  = form.text_field :description, class: "block w-full rounded-lg border p-2"
+
+.space-y-1
+  %label.block.w-full{for: :seller} Amount
+  = form.number_field :total_amount, step: 0.01, class: "block w-full rounded-lg border p-2"
+
+.space-y-1
+  %label.block.w-full{for: :seller} Date
+  = form.date_field :date, class: "block w-full rounded-lg border p-2"
+
+.space-y-1
+  %label.block.w-full{for: :seller} Note
+  = form.text_area :note, class: "block w-full rounded-lg border p-2"
+
+.space-y-1
+  - if receipt.image.representable?
+    %div.container.border.mt-5.border-gray-300.rounded-lg.p-2
+      = link_to rails_blob_path(receipt.image, disposition: "attachment") do
+        = image_tag receipt.image, title: "Download receipt"
