Make search button works correctly
It was only working if user clicks right on the "Search" text. Now it
works when user clicks anywhere on the button.

--- a/app/views/shared/components/_search.html.haml
+++ b/app/views/shared/components/_search.html.haml
@@ -11,8 +11,9 @@
       = date_field_tag :end_date, params[:end_date], class: "border rounded-lg w-full"
     .flex.flex-col{class: "md:w-1/4"}
       %label &nbsp;
-      %div.bg-green-500.hover:bg-green-600.text-white.font-bold.py-2.px-4.rounded-lg.w-full.flex.items-center.justify-center.gap-2
-        %div.flex-col
-          = heroicon "magnifying-glass"
-        %div.flex-col
-          = submit_tag "Search"
+      = button_tag({ class: "bg-green-500 hover:bg-green-600 text-white font-bold rounded-lg w-full flex items-center justify-center gap-2"}) do
+        %div.bg-green-500.hover:bg-green-600.text-white.font-bold.py-2.px-4.rounded-lg.w-full.flex.items-center.justify-center.gap-2
+          %div.flex-col
+            = heroicon "magnifying-glass"
+          %div.flex-col
+            Search
