--- a/app/views/shared/components/_search.html.haml
+++ b/app/views/shared/components/_search.html.haml
@@ -10,7 +10,7 @@
       %label End Date
       = date_field_tag :end_date, params[:end_date], class: "border rounded-lg w-full"
     .flex.flex-col{class: "md:w-1/4"}
-      %label &nbsp;
+      %label.hidden.lg:block &nbsp;
       = button_tag({ class: "bg-green-500 hover:bg-green-600 text-white font-bold rounded-lg w-full flex items-center justify-center gap-2"}) do
         %div.bg-green-500.hover:bg-green-600.text-white.font-bold.py-2.px-4.rounded-lg.w-full.flex.items-center.justify-center.gap-2
           %div.flex-col
