--- a/app/views/receipts/index.html.haml
+++ b/app/views/receipts/index.html.haml
@@ -1,26 +1,12 @@
-.max-w-4xl.mx-auto.p-4.space-y-6
+.space-y-4
   .flex.items-center.justify-between
     %h1.text-2xl.font-bold Add Receipt
   .space-y-4
     .container.mx-auto.border.p-4.rounded-lg
-      = render "form"
+      = render "new_receipt_form"
     .container.mx-auto.border.p-4.rounded-lg
       %h1.text-2xl.font-bold Your receipts
-      = form_tag(receipts_path, method: "get") do
-        .flex.flex-col.md:flex-row.items-start.md:items-start.border.rounded-lg.p-4.mt-4.space-y-4.md:space-y-0.md:space-x-4
-          .flex.flex-col{class: "md:w-1/4"}
-            %label Filter
-            = text_field_tag :search, params[:search], class: "border rounded-lg w-full"
-          .flex.flex-col{class: "md:w-1/4"}
-            %label Start Date
-            = date_field_tag :start_date, params[:start_date], class: "border rounded-lg w-full"
-          .flex.flex-col{class: "md:w-1/4"}
-            %label End Date
-            = date_field_tag :end_date, params[:end_date], class: "border rounded-lg w-full"
-          .flex.flex-col{class: "md:w-1/4"}
-            %label &nbsp;
-            = submit_tag "Search", class: "bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg w-full"
-
+      = render "shared/components/search", path: receipts_path
       - @receipts.each do |receipt|
         .bg-white.rounded-lg.border.shadow-sm.mt-5
           .p-4
@@ -32,14 +18,21 @@
                   = receipt.description
                 %p.text-sm.text-gray-600
                   - if receipt.image.attached?
-                    = link_to "Download receipt", rails_blob_path(receipt.image, disposition: "attachment")
+                    = link_to heroicon("arrow-down-tray"),
+                        rails_blob_path(receipt.image, disposition: "attachment"),
+                        title: "Download receipt"
+
               .text-right.flex.items-center.space-x-4
                 %div
                   %p.font-semibold
                     $#{number_with_precision(receipt.total_amount, precision: 2)}
                   %p.text-sm.text-gray-600
                     = receipt.date.strftime("%Y-%m-%d")
-                = link_to "Edit", edit_receipt_path(receipt), class: "text-gray-600 hover:text-gray-900"
+                %div
+                  = link_to heroicon("pencil-square"),
+                      edit_receipt_path(receipt),
+                      class: "text-gray-600 hover:text-gray-900",
+                      title: "Edit"
       - if @pagy.pages > 1
         .flex.justify-center.space-x-2.my-4
           = pagy_nav(@pagy).html_safe
