feat: Add margin to flash message (#32)

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
         .flex.justify-center.items-center.space-x-4
           // Flash messages
           - flash.each do |key, value|
-            .bg-green-100.text-green-700.p-4.rounded
+            .bg-green-100.text-green-700.p-4.rounded.mb-4
               = value
         = yield
 
