Remove direct upload from image form

--- a/app/views/shared/components/button/_upload.html.haml
+++ b/app/views/shared/components/button/_upload.html.haml
@@ -3,8 +3,7 @@
       type: "file",
       class: "absolute inset-0 w-full h-full opacity-0 cursor-pointer",
       id: "file_input",
-      onchange: 'previewReceipt(event)',
-      direct_upload: true
+      onchange: 'previewReceipt(event)'
 
   .flex.items-center.justify-center.px-4.py-2.bg-white.border.border-gray-300.rounded-md.shadow-sm.hover:bg-gray-50
     = heroicon "arrow-up-tray"
