--- a/app/views/receipts/_receipt_form.html.haml
+++ b/app/views/receipts/_receipt_form.html.haml
@@ -15,6 +15,10 @@
   = form.date_field :date, class: "block w-full rounded-lg border p-2"
 
 .space-y-1
+  %label.block.w-full{for: :category} Category
+  = form.select :category, [["Deduction", "deduction"], ["Income", "income"]], { include_blank: false }, class: "block w-full rounded-lg border p-2"
+
+.space-y-1
   %label.block.w-full{for: :note} Note
   = form.text_area :note, class: "block w-full rounded-lg border p-2"
 
