--- a/app/views/receipts/_receipt_list_item.html.haml
+++ b/app/views/receipts/_receipt_list_item.html.haml
@@ -7,6 +7,8 @@
         %p.text-sm.text-gray-600
           = receipt.description
         %p.text-sm.text-gray-600
+          = receipt.category
+        %p.text-sm.text-gray-600
           - if receipt.image.attached?
             = link_to heroicon("arrow-down-tray"),
                 rails_blob_path(receipt.image, disposition: "attachment"),
