feat: Display better alert messages

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,8 +29,12 @@
         .flex.justify-center.items-center.space-x-4
           // Flash messages
           - flash.each do |key, value|
-            .bg-green-100.text-green-700.p-4.rounded.mb-4
-              = value
+            - if key == "alert"
+              .bg-rose-200.p-4.rounded.mb-4
+                = value
+            - else
+              .bg-green-100.text-green-700.p-4.rounded.mb-4
+                = value
         = yield
 
     // Footer
