--- a/app/views/receipts/_new_receipt_form.html.haml
+++ b/app/views/receipts/_new_receipt_form.html.haml
@@ -4,4 +4,4 @@
     = render "shared/components/button/upload", form: form, text: "Upload receipt"
     = render "shared/components/image_preview"
     = render "receipt_form", form: form, receipt: receipt
-    = render "shared/components/button/save", form: form
+    = render "shared/components/button/save", form: form, text: "Save"
