--- a/app/views/receipts/edit.html.haml
+++ b/app/views/receipts/edit.html.haml
@@ -11,7 +11,7 @@
 
         .flex.justify-between.items-center
           %div.flex-grow
-            = render "shared/components/button/save", form: form
+            = render "shared/components/button/save", form: form, text: "Save"
 
           %label.bg-rose-400.hover:bg-rose-500.text-white.font-bold.py-2.px-4.rounded-lg.cursor-pointer{for: "delete"}
             = heroicon "trash"
