--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
             - if session[:userinfo]
               %a.text-gray-600.hover:text-gray-900{:href => "/auth/logout"} Logout
             - else
-              = button_to "Login", "/auth/auth0", method: :post, class: "text-gray-600 hover:text-gray-900"
+              = link_to "Login", "/auth/auth0", class: "text-gray-600 hover:text-gray-900", data: { method: :post }
 
     // Main content
     %main.flex-grow
