feat: Move "login" to the right hand side

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,16 +12,13 @@
   %body.flex.flex-col.min-h-screen
     %header.bg-white.border-b.border-gray-200
       .max-w-7xl.mx-auto.px-4.sm:px-6.lg:px-8
-        .flex.items-center.justify-between.h-16
-          - if session[:userinfo]
-            .flex.items-center
-              = link_to "Receipts", receipts_path
-
-          .flex.items-center.space-x-4
-            - if session[:userinfo]
-              %a.text-gray-600.hover:text-gray-900{:href => "/auth/logout"} Logout
-            - else
-              = link_to "Login", "/auth/auth0", class: "text-gray-600 hover:text-gray-900", data: { method: :post }
+        - if session[:userinfo]
+          .flex.flex-row.items-center.justify-between.space-x-4.h-16
+            = link_to "Receipts", receipts_path, class: "text-gray-600 hover:text-gray-900"
+            %a.text-gray-600.hover:text-gray-900{:href => "/auth/logout"} Logout
+        - else
+          .flex.flex-row.justify-end.space-x-4.items-center.h-16
+            = link_to "Login", "/auth/auth0", class: "text-gray-600 hover:text-gray-900", data: { method: :post }
 
     // Main content
     %main.flex-grow
