--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,4 +1,5 @@
-@import "././pagy.tailwind.css";
+@import "./pagy.tailwind.css";
+@import "./flash-message.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
