--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,10 +27,10 @@
           // Flash messages
           - flash.each do |key, value|
             - if key == "alert"
-              .bg-rose-200.p-4.rounded.mb-4
+              .flash-alert
                 = value
             - else
-              .bg-green-100.text-green-700.p-4.rounded.mb-4
+              .flash-success
                 = value
         = yield
 
