--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -7,7 +7,7 @@
       %p.max-w-2xl.mb-6.font-light.text-gray-500.lg:mb-8.md:text-lg.lg:text-xl.dark:text-gray-400
         Effortlessly manage your receipts, track deductions, and stay organized for a stress-free tax season.
       %a.inline-flex.items-center.justify-center.px-5.py-3.mr-3.text-base.font-medium.text-center.text-white.rounded-lg.bg-primary-700.hover:bg-primary-800.focus:ring-4.focus:ring-primary-300.dark:focus:ring-primary-900
-        = button_to "Get started", "/auth/auth0", class: "text-gray-600 hover:text-gray-900"
+        = button_to "Get started", "/auth/auth0", class: "text-white-600 hover:text-gray-900"
         %svg.w-5.h-5.ml-2.-mr-1{"aria-hidden" => "true", :fill => "currentColor", :viewbox => "0 0 20 20", :xmlns => "http://www.w3.org/2000/svg"}
           %path{:d => "M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z", :fill_rule => "evenodd"}
     .lg:mt-0.lg:col-span-5.lg:flex
